--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -48,14 +48,12 @@
                 <h1>Idear</h1>
             </div>
             <div class="think__title__content">
-                <p>En este documento se desarrollara el tercer y cuarto objetivo de la metodología de Desing Thinking: <br> Generar un usuario tipo para el cual se diseña la solución o producto, definiendo así el punto de vista a partir del cual se debe desarrollar el diseño. <br> Generar tantas ideas como sea posible. Por lo tanto, es necesario idear.</p>
+                <p> En este taller se explica previamente los 5 pasos necesarios para realizar el proyecto de Desing Thinking</p>
             </div>
         </div>
 
         <div class="think">
-            <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
-            </div>
+            
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-chaplin-hat-movie-streamline"></i>
