--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -59,11 +59,13 @@
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Idear</p>
-                    <p class="think__details__info__cont">Para poder solucionar el problema que se definió con anterioridad se usaron las siguientes técnicas:</p>
+                    <p class="think__details__info__title">EMPATIZAR</p>
+                    <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
+Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+</p>
                     <ul>
-                        <li>La lluvia de ideas o brainstorming es una técnica de creatividad en grupo. Cada miembros del grupo durante un tiempo previamente establecido  aporta el mayor número de ideas posibles sobre las posibles soluciones que se pueden aplicar al problema definido con anterioridad en el punto 2.</li>
-                        <li>La técnica de los 7 sombreros nos ayudó a buscar la más factible solución al problema que encontramos en la cafetería, llegando a concluir la creación de una aplicación para  los paneles táctiles así como para los dispositivos móviles. </li>
+			    
+                        
                     </ul>
                 </div>
 
