--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -63,6 +63,28 @@
                     <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
 Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
 </p>
+			</div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">DEFINIR </p>
+                    <p class="think__details__info__cont">En la primera fase, aparte de conocer sobre las rutinas de los usuarios finales, habrás podido reconocer una gran variedad de problemas y necesidades. Ya que no todos esos problemas tienen solución o simplemente no puedes solucionar todos los problemas de los usuarios finales, como empresa tienes cierto enfoque a un solo rubro o un par de rubros, así que es imposible que puedas solucionar todos sus problemas. Es esencial, entonces, definir cuáles son aquellos problemas del cliente según el área de oportunidad que ofrezca cada problema determinado. De esta forma, al tener una serie de problemas específicos puedes centrarte en tomar las medidas necesarias para llegar a una solución definitiva.</p>
+			</div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">EMPATIZAR</p>
+                    <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
+Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+</p>
+			</div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">EMPATIZAR</p>
+                    <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
+Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+</p>
+			</div>
+                <div class="think__details__info">
+                    <p class="think__details__info__title">EMPATIZAR</p>
+                    <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
+Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+</p>
                     <ul>
 			    
                         
