--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -68,19 +68,35 @@
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">DEFINIR </p>
-                    <p class="think__details__info__cont">En la primera fase, aparte de conocer sobre las rutinas de los usuarios finales, habrás podido reconocer una gran variedad de problemas y necesidades. Ya que no todos esos problemas tienen solución o simplemente no puedes solucionar todos los problemas de los usuarios finales, como empresa tienes cierto enfoque a un solo rubro o un par de rubros, así que es imposible que puedas solucionar todos sus problemas. Es esencial, entonces, definir cuáles son aquellos problemas del cliente según el área de oportunidad que ofrezca cada problema determinado. De esta forma, al tener una serie de problemas específicos puedes centrarte en tomar las medidas necesarias para llegar a una solución definitiva.</p>
+                    <p class="think__details__info__cont"></p>
+			        <div class="think">
+                                  <div class="think__img">
+                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
+                                     </div>
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">IDEAR</p>
-                    <p class="think__details__info__cont">Como su nombre indica, en esta fase empieza el proceso de generación de ideas en base a los problemas previamente establecidos. El objetivo es tener muchas alternativas de solución y no ir en busca de la mejor solución, al menos de momento. Se debe fomentar que todos los miembros de equipo participen de esta sesión y expongan su opinión y punto de vista.</p>
+                    <p class="think__details__info__cont"></p>
+			       <div class="think">
+                                  <div class="think__img">
+                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
+                                     </div>
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">EXPERIMENTAR</p>
-                    <p class="think__details__info__cont">El propósito de esta fase es convertir la idea o solución a la que has llegado en un prototipo digital o físico. No necesariamente debe ser un objeto, sino también un dibujo o incluso un guión gráfico. Los prototipos pueden ser elaborados con materiales como papel, cartón, plastilina o bloques de lego. Usualmente se emplean estos materiales económicos cuando el proyecto se encuentra en sus etapas iniciales y se va mejorando conforme el proyecto va mostrando progresos.</p>
+                    <p class="think__details__info__cont"></p>
+			      <div class="think">
+                                  <div class="think__img">
+                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
+                                     </div>
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">EVALUAR</p>
-                    <p class="think__details__info__cont">En esta etapa se realizan pruebas con los prototipos realizados previamente y se solicita a los usuarios sus opiniones y comentarios al respecto, en base al uso de los prototipos. Es una fase esencial en el Design Thinking pues ayuda a identificar errores y posibles carencias que puede tener el producto. En base a las pruebas se pueden presentar diversas mejoras sobre el producto.</p>
+                    <p class="think__details__info__cont"></p>
+			      <div class="think">
+                                  <div class="think__img">
+                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
+                                     </div>
                     <ul>
 			  
             </div>
