--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">EMPATIZAR</p>
-                    <p class="think__details__info__cont"></p>
+                    <p class="think__details__info__cont">https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing</p>
 			         <div class="think">
                                   <div class="think__img">
                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
