--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -66,7 +66,7 @@
                                   <div class="think__img">
                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
                                      </div>
-					  <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Documento - Diagrama de Gantt</a>
+					  <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
                                            </div>
 			         
 			</div>
