--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -60,7 +60,7 @@
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">EMPATIZAR</p>
+                    <p class="think__details__info__title">COMPRENDER</p>
                     <p class="think__details__info__cont"></p>
 			         <div class="think">
                                   <div class="think__img">
@@ -71,7 +71,7 @@
 			         
 			</div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">DEFINIR </p>
+                    <p class="think__details__info__title">DEFINIR</p>
                     <p class="think__details__info__cont"></p>
 			        <div class="think">
                                   <div class="think__img">
@@ -87,7 +87,7 @@
                                      </div>
 			</div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">EXPERIMENTAR</p>
+                    <p class="think__details__info__title">PROTOTIPAR</p>
                     <p class="think__details__info__cont"></p>
 			      <div class="think">
                                   <div class="think__img">
