--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -69,7 +69,7 @@
                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
                                      </div>  
 			
-			          <iframe width="560" height="315" src="https://www.youtube.com/watch?v=e12ENUpav0U" frameborder="0" allowfullscreen></iframe>
+			          <iframe width="560" height="315" src="https://youtu.be/e12ENUpav0U" frameborder="0" allowfullscreen></iframe>
                                      </div>  
 			</div>
                 <div class="think__details__info">
