--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -83,7 +83,7 @@
                     <p class="think__details__info__cont"></p>
 			       <div class="think">
                                   <div class="think__img">
-					                                            <a href="https://drive.google.com/file/d/1NKDI1Qidbmo1T9YfXdU0mIVuLbfj_mQb/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
+					                                            <a href="https://drive.google.com/file/d/1NKDI1Qidbmo1T9YfXdU0mIVuLbfj_mQb/view?usp=sharing" class="think__details__extra__description">TRABAJANDO</a>
                                                                                     </div>
                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
                                      </div>
