--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -57,6 +57,11 @@
             <div class="think__img">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/G7ei6EMHE5I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
+		
+	<div class="think">
+            <div class="think__img">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/09mYzJynjqY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
