--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -30,7 +30,7 @@
 <li><a href="design-thinking/practica6.html">Prototipar y Testear..</a></li>
                 </ul>
              </li>
-            <li><a href="../finalProject.html">Proyecto Final</a>
+            <li><a href="../finalProject.html">Proyecto de Fabricacion Digital</a>
                 <ul>
                     <li><a href="../proyecto-final/semana1.html">Semana 1</a></li>
                     <li><a href="../proyecto-final/semana2.html">Semana 2</a></li>
