--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -103,6 +103,11 @@
                                   <div class="think__img">
                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
                                      </div>
+				      
+     <div class="think">
+     <div class="think__img">
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/EvTJJ-JtlyU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
                     <ul>
 			  
             </div>
