--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -90,6 +90,12 @@ Aun en nuestra región no se ofrecen estos muebles, así que es una oportunidad 
             
                     <a href="https://drive.google.com/file/d/1PfcLy8M9zWM1FF2uAUGibj_9m2UwW2On/view?usp=sharing" class="think__details__extra__description">DATOS DEL COMPRADOR</a>
             </div>
+		
+   </div>
+   <div class="think__details__info">
+   <p class="think__details__info__title">ELEMENTOS ADICIONALES</p>
+         <p class="think__details__info__cont">Los elementos adicionales al proyectos que estamos realizando son de acuerod al consumidos en el cual estamos enfocados, estos serian pinturas de color que el cliente prefiera, barnices papeles decorativos y algun tallado especial con algun nombre en especial , se hara un tipo de diseño en los bordes de los muebles ´para darle un mejor acabado al proyecto</p>
+           </div>
 		</div>
         </div>
     </div>
