--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -75,8 +75,11 @@
                     <p class="think__details__info__cont"></p>
 			        <div class="think">
                                   <div class="think__img">
-                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
-                                     </div>
+                             </div>
+                             <div class="team__item">
+                             <div class="team__item__img">
+                             <img src="img/maria.jpg" alt="">
+                </div>
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">IDEAR</p>
