--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -73,7 +73,7 @@
                  </div>
 			</div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">IDEAR</p>
+                    <p class="think__details__info__title">DEFINIR</p>
                     <p class="think__details__info__cont"></p>
 			       <div class="think">
                                   <div class="think__img">
@@ -88,10 +88,9 @@
                     <p class="think__details__info__cont"></p>
 			       <div class="think">
                                   <div class="think__img">
-					                                            <a href="https://drive.google.com/file/d/1NKDI1Qidbmo1T9YfXdU0mIVuLbfj_mQb/view?usp=sharing" class="think__details__extra__description">TRABAJANDO</a>
+					                                            <a href="https://drive.google.com/file/d/1sGTOCchcO17oGh7JtJ3A0fzkObJOXyId/view?usp=sharing" class="think__details__extra__description">TRABAJANDO</a>
                                                                                     </div>
-                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
-                                     </div>
+                                  
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">PROTOTIPAR</p>
