--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -66,8 +66,7 @@
                                   <div class="think__img">
 					                                            <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
                                                                                     </div>
-                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/e12ENUpav0U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                                     </div>  
+                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/aQklQcCIWZw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			
 			        
                  </div>
@@ -106,7 +105,7 @@
                     <p class="think__details__info__cont"></p>
 			      <div class="think">
                                   <div class="think__img">
-                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/H2W7nfMD65A" frameborder="0" allowfullscreen></iframe>
+                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/e12ENUpav0U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                      </div>
 				      
      <div class="think">
