--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -61,7 +61,9 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">COMPRENDER</p>
-                    <p class="think__details__info__cont"></p>
+                    <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
+Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+</p>
 			         <div class="think">
                                   <div class="think__img">
 					                                            <a href="https://drive.google.com/file/d/1re61p81ecYln0SBWRymbH9_q05H3YH7n/view?usp=sharing" class="think__details__extra__description">Encuestas</a>
@@ -73,7 +75,9 @@
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">DEFINIR</p>
-                    <p class="think__details__info__cont"></p>
+                    <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
+Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+</p>
 			       <div class="think">
                                   <div class="think__img">
 					                                            <a href="https://drive.google.com/file/d/1NKDI1Qidbmo1T9YfXdU0mIVuLbfj_mQb/view?usp=sharing" class="think__details__extra__description">IMAGEN</a>
@@ -84,16 +88,19 @@
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">IDEAR</p>
-                    <p class="think__details__info__cont"></p>
+                    <p class="think__details__info__cont">Empatía es la capacidad que tienen los seres humanos de identificarse con ciertas personas y entender sus sentimientos. Esta es la fase esencial en la que los miembros de un grupo intentan conocer y comprender a los usuarios finales de manera más profunda. No sólo se trata de conocer datos y estadísticas, sino de analizar situaciones, comprender la vida de los usuarios, así como los diferentes problemas y necesidades que poseen.
+Para poder desarrollar la empatía no basta con observar a los usuarios, sino involucrarse con ellos mediante una conversación en la que ellos puedan compartir su punto de vista y debes procurar escuchar atentamente. Puede ser complicado desarrollar un grado de empatía con los usuarios finales, pero esta fase es la base del Design Thinking, así que es muy importante que se realice con mucha paciencia.
+</p>
 			       <div class="think">
                                   <div class="think__img">
 					                                            <a href="https://drive.google.com/file/d/1sGTOCchcO17oGh7JtJ3A0fzkObJOXyId/view?usp=sharing" class="think__details__extra__description">IMAGEN</a>
                                                                                     </div>
+		   <p class="think__details__info__cont">EN LA IMAGEN SE PUEDE OBSERVAR QUE LAS INTEGRANTES DEL GRUPO ESTAN BUSCANDO IDEAS, PARA SOLUCIONAR EL PROBLEMA DE LOS ESPACIOS REDUCIDOS.</p>
                                   
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">PROTOTIPAR</p>
-                    <p class="think__details__info__cont"></p>
+                    <p class="think__details__info__cont">El propósito de esta fase es convertir la idea o solución a la que has llegado en un prototipo digital o físico. No necesariamente debe ser un objeto, sino también un dibujo o incluso un guión gráfico. Los prototipos pueden ser elaborados con materiales como papel, cartón, plastilina o bloques de lego. Usualmente se emplean estos materiales económicos cuando el proyecto se encuentra en sus etapas iniciales y se va mejorando conforme el proyecto va mostrando progresos.</p>
 			      <div class="think">
                                   <div class="think__img">
 					                                            <a href="https://drive.google.com/file/d/1NKDI1Qidbmo1T9YfXdU0mIVuLbfj_mQb/view?usp=sharing" class="think__details__extra__description">IMAGEN</a>
@@ -102,12 +109,13 @@
 			</div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">EVALUAR</p>
-                    <p class="think__details__info__cont"></p>
+                    <p class="think__details__info__cont">En esta etapa se realizan pruebas con los prototipos realizados previamente y se solicita a los usuarios sus opiniones y comentarios al respecto, en base al uso de los prototipos. Es una fase esencial en el Design Thinking pues ayuda a identificar errores y posibles carencias que puede tener el producto. En base a las pruebas se pueden presentar diversas mejoras sobre el producto.</p>
 			      <div class="think">
                                   <div class="think__img">
                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/e12ENUpav0U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                      </div>
 				      
+	<p class="think__details__info__cont"> <p class="think__details__info__cont">Como has podido apreciar, el Design Thinking está íntimamente relacionado con el proceso de diseño e incluso algunas de las fases son muy parecidas. La principal diferencia tal vez se encuentra en la profundidad de análisis de todas las fases.</p>      
      <div class="think">
      <div class="think__img">
      <iframe width="560" height="315" src="https://www.youtube.com/embed/EvTJJ-JtlyU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
