--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -58,14 +58,14 @@
                     <i class="icon-settings-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Calculos Basados al Diseño</p>
-                    <p class="think__details__info__cont">En este parte del proyecto se definirá la relación de este proyecto con las matemáticas ya que es necesario conocer ciertos datos y cifras concisas sobre la implementación del proyecto así como saber el límite y máximo de los componentes.</p>
+                    <p class="think__details__info__title">Planos del Proyecto</p>
+                    <p class="think__details__info__cont">Para la realizacion de los planos para el proyecto se utilizo el programa Rhinoceros , el cual nos facilito realizar las medidas adecuadas , y prototipar el modelo real </p>
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Archivo - Cálculos basado al Diseño</p>
-                    <p class="think__details__extra__description">EL presente archivo muestra la manera como se determinó el ancho de banda que utiliza la cámara mediante la aplicación de la fórmula de aplicación del ancho de banda , además de los usuarios admitidos , parámetros que permite cada dispositivo.</p>
-                    <a href="https://drive.google.com/file/d/1PGROxso1_vc_G8KD01LdhZqrysH_weuA/view?usp=sharing" target="_blank">Documento - Cálculos Basado al diseño</a>
+                    <p class="think__details__extra__title">ARCHIVO</p>
+                    <p class="think__details__extra__description"> </p>
+                    <a href="https://drive.google.com/file/d/1tZgIzuuvwAd2iXyPF_UIHHij5c7-UL-Q/view?usp=sharing" target="_blank">PLANOS</a>
                 </div>
             </div>
         </div>
