--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -48,6 +48,11 @@
                 <h1>Semana 2</h1>
             </div>
         </div>
+	    </div>
+            <div class="team__item">
+                <div class="team__item__img">
+                    <img src="img/maria.jpg" alt="">
+                </div>
 
         <div class="think">
             <div class="think__img">
