--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -48,12 +48,6 @@
                 <h1>Semana 2</h1>
             </div>
         </div>
-	    </div>
-            <div class="team__item">
-                <div class="team__item__img">
-                    <img src="img/maria.jpg" alt="">
-                </div>
-
         <div class="think">
             <div class="think__img">
                 <img src="../img/calculo.png" alt="">
@@ -72,6 +66,12 @@
                     <p class="think__details__extra__description"> </p>
                     <a href="https://drive.google.com/file/d/1tZgIzuuvwAd2iXyPF_UIHHij5c7-UL-Q/view?usp=sharing" target="_blank">PLANOS</a>
                 </div>
+		         </div>
+                         <div class="think">
+                         <div class="think__img">
+                              <img src="../img/calculo.png" alt="">
+            </div>
+		    
             </div>
         </div>
     </div>
