--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -95,7 +95,7 @@ Para poder desarrollar la empatía no basta con observar a los usuarios, sino in
                                   <div class="think__img">
 					                                            <a href="https://drive.google.com/file/d/1sGTOCchcO17oGh7JtJ3A0fzkObJOXyId/view?usp=sharing" class="think__details__extra__description">IMAGEN</a>
                                                                                     </div>
-		   <p class="think__details__info__cont">EN LA IMAGEN SE PUEDE OBSERVAR QUE LAS INTEGRANTES DEL GRUPO ESTAN BUSCANDO IDEAS, PARA SOLUCIONAR EL PROBLEMA DE LOS ESPACIOS REDUCIDOS.</p>
+		   <p class="think__details__info__cont">en la imagen se puede observar que las integrantes del grupo estan buscando ideas, para solucionar el problema de los espacion reducidos</p>
                                   
 			</div>
                 <div class="think__details__info">
