--- a/en/index.html
+++ b/en/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://file.myfontastic.com/GFdi3b86tZ4RquQn6hWJeh/icons.css" rel="stylesheet">
-    <title>Portfolio</title>
+    <title>INNOVATION</title>
 </head>
 <body>
     <div id="top">
@@ -22,21 +22,22 @@
 			<li><a href="index.html">Home</a></li>
             <li><a href="design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="design-thinking/practica1.html">Practice 1</a></li>
-                    <li><a href="design-thinking/practica2.html">Practice 2</a></li>
-                    <li><a href="design-thinking/practica3.html">Practice 3</a></li>
-                    <li><a href="design-thinking/practica4.html">Practice 4</a></li>
-                    <li><a href="design-thinking/practica5.html">Practice 5</a></li>
+                    <li><a href="design-thinking/practica1.html">Project Management</a></li>
+                    <li><a href="design-thinking/practica2.html">Design Thinking workshop</a></li>
+                    <li><a href="design-thinking/practica3.html">Empathize</a></li>
+                    <li><a href="design-thinking/practica4.html">Define</a></li>
+                    <li><a href="design-thinking/practica5.html">Devise</a></li>
+		    <li><a href="design-thinking/practica6.html">Prototype and Test</a></li>
                 </ul>
              </li>
             <li><a href="finalProject.html">Final Project</a>
                 <ul>
-                    <li><a href="final-project/semana1.html">Week 1</a></li>
-                    <li><a href="final-project/semana2.html">Week 2</a></li>
-                    <li><a href="final-project/semana3.html">Week 3</a></li>
-                    <li><a href="final-project/semana4.html">Week 4</a></li>
-                    <li><a href="final-project/semana5.html">Week 5</a></li>
-                    <li><a href="final-project/semana6.html">Week 6</a></li>
+                    <li><a href="proyecto-final/semana1.html">Development of the Website</a></li>
+                    <li><a href="proyecto-final/semana2.html">Design Development</a></li>
+                    <li><a href="proyecto-final/semana3.html">Project execution</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentation Part 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Final presentation</a></li>
+                    <li><a href="proyecto-final/semana6.html">Project fair</a></li>
                 </ul>
             </li>
 		</ul>
@@ -50,7 +51,7 @@
                 </div> -->
             
                 <div class="main-header__copy__text">
-                    <p>The objective of this portfolio is to show in detail everything done in the course of Innovation and Technological Research. Applying various methodologies and study techniques for the preparation of the different projects presented.</p>
+                    <p>The objective of this course is to contribute efficiently to the development of projects with digital manufacturing, inventing their own future on the basis of sustainability of a society with an entrepreneurial spirit.</p>
                 </div>
             </div>
             
@@ -60,10 +61,10 @@
     <div id="about">
         <div class="about">
             <div class="title">
-                <h4>About Us</h4>
+                <h4>About us</h4>
             </div>
             <div class="about__content">
-                <p>We are currently students of Networks and Data Communication of the fourth semester, with knowledge in network administration, conditionality of network intermediary devices, structured copper and fiber optic cabling, administration of networks with Windows Server 2012, administration of Microsoft Operating Systems © Windows and Linux.</p>
+                <p>We are currently students of Operation Mineral Processing Plant for the fourth semester, with knowledge in production of electrical circuits, the program management of Rhinoceros and Autocad. In addition to knowledge in metallurgical mining processes.</p>
             </div>
         </div>
     </div>
@@ -75,47 +76,54 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="../img/daniel.jpg" alt="">
+                    <img src="img/maria.jpg" alt="">
+                  </div>
+                <div class="team__item__description">
+                    <p class="team__item__description__name">Maria de los Angeles Soto Torres</p>
+                    <p class="team__item__description__info">I consider myself a sincere and honest person, capable of working as a team and under pressure. I have knowledge about various programs such as Autocad, Rhinoceros, also about electrical circuits. I also have basic English knowledge. I have the facility of word and expression with the power of conviction towards other people.</p>
+                    <p class="team__item__description__cal">Calificación: <strong></strong></p>
+                    <p class="team__item__description__cal">Telefono : <strong>966724407</strong></p>
+                    <a href="mailto:maria.soto@tecsup.edu.pe" class="team__item__description__mail">maria.soto@tecsup.edu.pe</a>
+                    </div>
+            </div>
+            <div class="team__item">
+                <div class="team__item__img">
+                    <img src="img/alicia.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                    <p class="team__item__description__name">Julio Daniel López Sánchez</p>
-                    <p class="team__item__description__info">I consider myself an honest person, I like to help my colleagues. Technology lover, I like to program</p>
-                    <p class="team__item__description__cal">Qualification: <strong>90%</strong></p>  
-                    <a href="mailto:julio.lopez.s@tecsup.edu.pe" class="team__item__description__mail">julio.lopez.s@tecsup.edu.pe</a>
+                    <p class="team__item__description__name">Alicia Nadine Tejada Zegarra</p>
+                    <p class="team__item__description__info">
+I consider myself a responsible, dynamic and creative person, expert in crafts such as cards, crafts, cold ceramics, paintings, fabrics, decoration, etc. I currently have a basic English in the Cultural and I have ease of expression to the public.</p>
+                    <p class="team__item__description__cal">Calificación: <strong></strong></p>
+                    <p class="team__item__description__cal">Telefono: <strong>986295171</strong></p>
+                    <a href="mailto:alicia.tejada@tecsup.edu.pe" class="team__item__description__mail">alicia.tejada@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="../img/dayhana.jpg" alt="">
-                </div>
+                    <img src="img/yomara.jpg" alt="">
+                 </div>
                 <div class="team__item__description">
-                    <p class="team__item__description__name">Dayhana Paredes Puma</p>
-                    <p class="team__item__description__info">I have interests in issues related to creating your own linux command line in several languages.</p> 
-                    <p class="team__item__description__cal">Qualification: <strong>90%</strong></p>  
-                    <a href="mailto:dayhana.paredes@tecsup.edu.pe" class="team__item__description__mail">dayhana.paredes@tecsup.edu.pe</a>
-                </div>
-            </div>
-            <div class="team__item">
-                <div class="team__item__img">
-                    <img src="../img/patricio.jpg" alt="">
-                </div>
-                <div class="team__item__description">
-                    <p class="team__item__description__name">Patricio Álvarez del Carpio</p>
-                    <p class="team__item__description__info">I am an active, honest, cooperative person, able to work under pressure and help my colleagues.</p>
-                    <p class="team__item__description__cal">Qualification: <strong>90%</strong></p>   
-                    <a href="mailto:americo.alvarez@tecsup.edu.pe" class="team__item__description__mail">americo.alvarez@tecsup.edu.pe</a>
-                </div>
+                    <p class="team__item__description__name">Yomara Amarilis Ramos Surco</p>
+                    <p class="team__item__description__info">
+I consider myself a leader, honest, persevering person who achieves his goals, with ease of words and power of conviction. I have experience in the sales area in the field. I have taken courses in occupational health and safety and English at the basic level. I own a portfolio of clients to get to promote a product.</p>
+                    <p class="team__item__description__cal">Calificación: <strong></strong></p>
+                    <p class="team__item__description__cal">Telefono : <strong>955576917</strong></p>
+                    <a href="mailto:yomara.ramos@tecsup.edu.pe" class="team__item__description__mail">yomara.ramos@tecsup.edu.pe</a>
+                    </div>
             </div>
             <div class="team__item">
                     <div class="team__item__img">
-                        <img src="../img/adrian.jpg" alt="">
-                    </div>
-                    <div class="team__item__description">
-                        <p class="team__item__description__name">Adrian Anicama Lopez</p>
-                        <p class="team__item__description__info">I have interests in issues related to the manufacture of new technological products and the manipulation of convergent networks.</p>
-                        <p class="team__item__description__cal">Qualification: <strong>85%</strong></p>  
-                        <a href="mailto:adrian.anicama@tecsup.edu.pe" class="team__item__description__mail">adrian.anicama@tecsup.edu.pe</a>
-                    </div>
+                        <img src="img/esmeralda.jpg" alt="">
+                     </div>
+                <div class="team__item__description">
+                    <p class="team__item__description__name">Esmeralda Pamela Saico Jihuallanca</p>
+                    <p class="team__item__description__info">
+I consider myself a person able to achieve everything that I propose, I am honest and respectful. I have sales skills of all kinds in large and small companies, I have a certificate in oratory and speech, my favorite hobby is dancing and volleyball in addition to basic English course.</p>
+                    <p class="team__item__description__cal">Calificación: <strong></strong></p>
+                    <p class="team__item__description__cal">Telefono: <strong>988711094</strong></p>
+                    <a href="mailto:esmeralda.saico@tecsup.edu.pe" class="team__item__description__mail">esmeralda.saico@tecsup.edu.pe</a>
+                     </div>
                 </div>
         </div>
     </div>
@@ -129,7 +137,7 @@
                 <a href="design.html"><h3>desing Thiking</h3></a>
             </div>
             <div class="projects__item">
-                <a href="finalProject.html"><h3>final project</h3></a>
+                <a href="finalProject.html"><h3>Digital Manufacturing Project</h3></a>
             </div>
         </div>
     </div>
@@ -142,7 +150,7 @@
             </div>
             <div class="footer__copy">
                 <img src="../img/fablab.png" alt="">
-                <p>&copy; 2017 - Designed by: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                <p>&copy; 2017 - Designed by: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
             </div>
         </div>
     </footer>
