--- a/en/index.html
+++ b/en/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/maria.jpg" alt="">
+                    <img src="../img/maria.jpg" alt="">
                   </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Maria de los Angeles Soto Torres</p>
@@ -88,7 +88,7 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/alicia.jpg" alt="">
+                    <img src="../img/alicia.jpg" alt="">
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Alicia Nadine Tejada Zegarra</p>
@@ -101,7 +101,7 @@ I consider myself a responsible, dynamic and creative person, expert in crafts s
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/yomara.jpg" alt="">
+                    <img src="../img/yomara.jpg" alt="">
                  </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Yomara Amarilis Ramos Surco</p>
@@ -114,7 +114,7 @@ I consider myself a leader, honest, persevering person who achieves his goals, w
             </div>
             <div class="team__item">
                     <div class="team__item__img">
-                        <img src="img/esmeralda.jpg" alt="">
+                        <img src="../img/esmeralda.jpg" alt="">
                      </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Esmeralda Pamela Saico Jihuallanca</p>
