--- a/design.html
+++ b/design.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="footer__copy">
                     <img src="img/fablab.png" alt="">
-                    <p>&copy; 2017 - Diseñado por: <a href="mailto:julio.lopez.s@tecsup.edu.pe">Julio Daniel López Sánchez</a></p>
+                    <p>&copy; 2017 - Diseñado por: <a href="mailto:maria.soto@tecsup.edu.pe">Maria de los Angeles Soto Torres</a></p>
                 </div>
             </div>
         </footer>
