--- a/en/design.html
+++ b/en/design.html
@@ -22,22 +22,22 @@
 			<li><a href="index.html">Home</a></li>
             <li><a href="design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="design-thinking/practica1.html">Diseño de página web y Planteamiento del Proyecto de Design Thinking</a></li>
-                    <li><a href="design-thinking/practica2.html">Taller de Design Thinking</a></li>
-                    <li><a href="design-thinking/practica3.html">Empatizar</a></li>
-                    <li><a href="design-thinking/practica4.html">Definir.</a></li>
-                    <li><a href="design-thinking/practica5.html">Idear.</a></li>
-		    <li><a href="design-thinking/practica6.html">Prototipar y Testear..</a></li>
+                    <li><a href="design-thinking/practica1.html">Design of the web page and approach of the Design Thinking Project</a></li>
+                    <li><a href="design-thinking/practica2.html">Design Thinking Workshop</a></li>
+                    <li><a href="design-thinking/practica3.html">Empathize</a></li>
+                    <li><a href="design-thinking/practica4.html">Define.</a></li>
+                    <li><a href="design-thinking/practica5.html">Devise.</a></li>
+		    <li><a href="design-thinking/practica6.html">Prototype and Test</a></li>
                 </ul>
              </li>
             <li><a href="finalProject.html">Final Project</a>
                 <ul>
-                    <li><a href="proyecto-final/semana1.html">Desarrollo de la página Web</a></li>
-                    <li><a href="proyecto-final/semana2.html">Desarrollo del Diséño</a></li>
-                    <li><a href="proyecto-final/semana3.html">Ejecución del Proyecto</a></li>
-                    <li><a href="proyecto-final/semana4.html">Presentacion Parte 1</a></li>
-                    <li><a href="proyecto-final/semana5.html">Presentacion Final </a></li>
-                    <li><a href="proyecto-final/semana6.html">Feria de Proyecto</a></li>
+                    <li><a href="proyecto-final/semana1.html">Development of the Website</a></li>
+                    <li><a href="proyecto-final/semana2.html">Development of the Design</a></li>
+                    <li><a href="proyecto-final/semana3.html">Project execution</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentation Part 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Final presentation</a></li>
+                    <li><a href="proyecto-final/semana6.html">Project Fair</a></li>
                 </ul>
             </li>
 		</ul>
@@ -49,9 +49,9 @@
                 <h1>design <span>Thiking</span></h1>
             </div>
             <!-- <div class="design__title__content">
-                <p>Uno de los mayores problemas a los que se enfretan las millones de personas que viven en departamentos pequeños, en los edificios ; es del poco espacio que poseen en sus hogares , y la incomodidad de vivir en ellos
-                Una excelente oportunidad de negocio con millones de clientes potenciales es el de fabricar, y vender muebles plegables para este segmento del mercado
-            Estos muebles son perfectos para areas pequeñas, ya que evitan la sensacion de acumulacion, son muy esteticos , practicos y funcionales ademas de faciles de armas, ya que estan compuestas por piezas prefabricada</p>
+                <p>One of the biggest problems facing millions of people living in small apartments, in buildings; it is from the little space they have in their homes, and the discomfort of living in them
+                An excellent business opportunity with millions of potential customers is to manufacture, and sell folding furniture for this segment of the market
+            These furniture are perfect for small areas, since they avoid the accumulation sensation, they are very aesthetic, practical and functional besides easy weapons, since they are composed of prefabricated pieces</p>
             </div> -->
         </div>
         <div class="design">
@@ -60,8 +60,8 @@
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica2.html" class="design__item__info__title">Gestion de Proyectos y Planteamiento del Problema</a>
-                    <p class="design__item__info__details">Limite de entrega de Entrega: 27 de Febrero , hasta alas 13:35 </p>
+                    <a href="design-thinking/practica2.html" class="design__item__info__title">Project Management and Problem Statement</a>
+                    <p class="design__item__info__details">Delivery limit: February 27, until 13:35 </p>
                 </div>
                 <div class="design__item__img">
                     <img src="../img/empatizar.png" alt="">
@@ -72,8 +72,8 @@
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica3.html" class="design__item__info__title">Taller de Design Thiking</a>
-                    <p class="design__item__info__details">  Limite de Entrega: 13 de Marzo , hasta las 13:35 ..</p>
+                    <a href="design-thinking/practica3.html" class="design__item__info__title">Design Thiking Workshop</a>
+                    <p class="design__item__info__details"> Delivery Limit: March 13, until 1:35 p.m.5 ..</p>
                 </div>
                 <div class="design__item__img">
                     <img src="../img/brainstorm.png" alt="">
@@ -85,8 +85,8 @@
                     <i class="icon-edit-modify-streamline"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica4.html" class="design__item__info__title">Empatizar</a>
-                    <p class="design__item__info__details">Limite de Entrega: 27 de Marzo, hasta las 13:35.</p>
+                    <a href="design-thinking/practica4.html" class="design__item__info__title">Empathize</a>
+                    <p class="design__item__info__details">Delivery Limit: March 27, until 1:35 p.m..</p>
                 </div>
                 <div class="design__item__img">
                     <img src="../img/prototipar.png" alt="">
@@ -98,8 +98,8 @@
                     <i class="icon-picture-streamline-1"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica5.html" class="design__item__info__title">Definir</a>
-                    <p class="design__item__info__details">Limite de Entrega: 10 de Abril, hasta las 13:35</p>
+                    <a href="design-thinking/practica5.html" class="design__item__info__title">Define</a>
+                    <p class="design__item__info__details">Delivery Limit: April 10, until 1:35 p.m.</p>
                 </div
 	   </div>
 
@@ -108,8 +108,8 @@
                     <i class="icon-edit-modify-streamline"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica4.html" class="design__item__info__title">Idear</a>
-                    <p class="design__item__info__details">Limite de Entrega: 24 de Abril , hasta las 13:35.</p>
+                    <a href="design-thinking/practica4.html" class="design__item__info__title">Devise</a>
+                    <p class="design__item__info__details">Delivery Limit: April 24, until 1:35 p.m..</p>
                  </div>
             </div>
 
@@ -118,8 +118,8 @@
                     <i class="icon-edit-modify-streamline"></i>
                 </div>
                 <div class="design__item__info">
-                    <a href="design-thinking/practica4.html" class="design__item__info__title">Protitipar y Testear</a>
-                    <p class="design__item__info__details">Limite de Entrega:8 de Mayo, hasta las 13:35 .</p>
+                    <a href="design-thinking/practica4.html" class="design__item__info__title">Protitipar and Test</a>
+                    <p class="design__item__info__details">Delivery Limit: May 8, until 1:35 p.m. .</p>
                 
                 </div>
                 <div class="design__item__img">
