--- a/en/design.html
+++ b/en/design.html
@@ -100,7 +100,10 @@
                 <div class="design__item__info">
                     <a href="design-thinking/practica5.html" class="design__item__info__title">Define</a>
                     <p class="design__item__info__details">Delivery Limit: April 10, until 1:35 p.m.</p>
-                </div
+                </div>
+                <div class="design__item__img">
+                    <img src="../img/prototipar.png" alt="">
+                </div>
 	   </div>
 
             <div class="design__item">
@@ -111,6 +114,9 @@
                     <a href="design-thinking/practica4.html" class="design__item__info__title">Devise</a>
                     <p class="design__item__info__details">Delivery Limit: April 24, until 1:35 p.m..</p>
                  </div>
+                <div class="design__item__img">
+                    <img src="../img/prototipar.png" alt="">
+                </div>
             </div>
 
             <div class="design__item">
@@ -120,6 +126,10 @@
                 <div class="design__item__info">
                     <a href="design-thinking/practica4.html" class="design__item__info__title">Protitipar and Test</a>
                     <p class="design__item__info__details">Delivery Limit: May 8, until 1:35 p.m. .</p>
+			</div>
+                <div class="design__item__img">
+                    <img src="../img/prototipar.png" alt="">
+                </div>
                 
                 </div>
                 <div class="design__item__img">
