--- a/en/finalProject.html
+++ b/en/finalProject.html
@@ -22,22 +22,22 @@
 			<li><a href="index.html">Home</a></li>
             <li><a href="design.html">Design Thinking</a>
 				<ul>
-                    <li><a href="design-thinking/practica1.html">Gestion de Proyecto yy Planteamiento del Problema</a></li>
-                    <li><a href="design-thinking/practica2.html">Taller de Design Thinking</a></li>
-                    <li><a href="design-thinking/practica3.html">Empatizar</a></li>
-                    <li><a href="design-thinking/practica4.html">Definir</a></li>
-                    <li><a href="design-thinking/practica5.html">Idear</a></li>
-		    <li><a href="design-thinking/practica5.html">Prototipar y Testear</a></li>
+                    <li><a href="design-thinking/practica1.html">Project Management and and Problem Statement</a></li>
+                    <li><a href="design-thinking/practica2.html">Design Thinking Workshop</a></li>
+                    <li><a href="design-thinking/practica3.html">Empathize</a></li>
+                    <li><a href="design-thinking/practica4.html">Define</a></li>
+                    <li><a href="design-thinking/practica5.html">Devise</a></li>
+		    <li><a href="design-thinking/practica5.html">Prototype and Test</a></li>
                 </ul>
              </li>
             <li><a href="finalProject.html">Final Project</a>
                 <ul>
-                    <li><a href="proyecto-final/semana1.html">Desarrollo de la pagina web</a></li>
-                    <li><a href="proyecto-final/semana2.html">Desarrollo del Diseño</a></li>
-                    <li><a href="proyecto-final/semana3.html">Ejecucion del Proyecto</a></li>
-                    <li><a href="proyecto-final/semana4.html">Presentacion Parte 1</a></li>
-                    <li><a href="proyecto-final/semana5.html">Presentacion Final</a></li>
-                    <li><a href="proyecto-final/semana6.html">Feria de Proyecto</a></li>
+                    <li><a href="proyecto-final/semana1.html">Development of the website</a></li>
+                    <li><a href="proyecto-final/semana2.html">Design Development</a></li>
+                    <li><a href="proyecto-final/semana3.html">Project execution</a></li>
+                    <li><a href="proyecto-final/semana4.html">Presentation Part 1</a></li>
+                    <li><a href="proyecto-final/semana5.html">Final presentation</a></li>
+                    <li><a href="proyecto-final/semana6.html">Project Fair</a></li>
                 </ul>
             </li>
 		</ul>
@@ -46,9 +46,9 @@
         <div class="projectsFinal__title">
             <div class="projectsFinal__title__text">
                 <h1>final <span>project</span></h1>
-            </div>Nuestro proyecto de laboratorio , esta dirigido a uno de los mayores problemas a los que se enfretan las millones de personas que viven en departamentos pequeños, en los edificios ; es del poco espacio que poseen en sus hogares , y la incomodidad de vivir en ellos
-                Una excelente oportunidad de negocio con millones de clientes potenciales es el de fabricar, y vender muebles plegables para este segmento del mercado
-            Estos muebles son perfectos para areas pequeñas, ya que evitan la sensacion de acumulacion, son muy esteticos , practicos y funcionales ademas de faciles de armas, ya que estan compuestas por piezas prefabricada
+            </div>Our laboratory project is aimed at one of the biggest problems facing millions of people living in small apartments, in buildings; it is from the little space they have in their homes, and the discomfort of living in them
+                An excellent business opportunity with millions of potential customers is to manufacture, and sell folding furniture for this segment of the market
+            These furniture are perfect for small areas, since they avoid the accumulation sensation, they are very aesthetic, practical and functional besides easy weapons, since they are composed of prefabricated pieces
         </div>
         <div class="projectsFinal">
             <div class="projectsFinal__week">
@@ -56,8 +56,8 @@
                     <i class="icon-pen-streamline-1"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana1.html" class="projectsFinal__week__details__week">Week 1 - Desarrollo de la Pagina Web </a>
-                    <p class="projectsFinal__week__details__description"> Limite de Entrega: 28 de Febrero , hasta las 10:15.</p>
+                    <a href="final-project/semana1.html" class="projectsFinal__week__details__week">Week 1 - Development of the Website</a>
+                    <p class="projectsFinal__week__details__description">Delivery Limit: February 28, until 10:15.</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -65,8 +65,8 @@
                     <i class="icon-settings-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana2.html" class="projectsFinal__week__details__week">Week 2 - Desarrollo del Diseño</a>
-                    <p class="projectsFinal__week__details__description">Limite de Entrega: 14 de Marzo , hasta las 10:15</p>
+                    <a href="final-project/semana2.html" class="projectsFinal__week__details__week">Week 2 - Development of Design</a>
+                    <p class="projectsFinal__week__details__description">Delivery Limit: March 14, until 10:15</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -74,8 +74,8 @@
                     <i class="icon-design-graphic-tablet-streamline-tablet"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana3.html" class="projectsFinal__week__details__week">Week 3 - Ejecucion del Proyecto</a>
-                    <p class="projectsFinal__week__details__description"> Limite de Entrega: 28 de Marzo , hasta las 10:15.</p>
+                    <a href="final-project/semana3.html" class="projectsFinal__week__details__week">Week 3 - Project execution</a>
+                    <p class="projectsFinal__week__details__description"> Delivery Limit: March 28, until 10:15.</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -83,8 +83,8 @@
                     <i class="icon-settings-streamline-1"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana4.html" class="projectsFinal__week__details__week">Week 4 - Presentacion Parte 1</a>
-                    <p class="projectsFinal__week__details__description">Limite de Entrega: 11 de Abril , hasta las 10:15</p>
+                    <a href="final-project/semana4.html" class="projectsFinal__week__details__week">Week 4 - Presentation Part 1</a>
+                    <p class="projectsFinal__week__details__description">Delivery Limit: April 11, until 10:15</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -92,8 +92,8 @@
                     <i class="icon-remote-control-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="final-project/semana5.html" class="projectsFinal__week__details__week">Week 5 - Presentacion Final</a>
-                    <p class="projectsFinal__week__details__description">Limite de Entrega: 25 de Abril , hasta las 10:15</p>
+                    <a href="final-project/semana5.html" class="projectsFinal__week__details__week">Week 5 - Final presentation</a>
+                    <p class="projectsFinal__week__details__description">Delivery Limit: April 25, until 10:15</p>
                 </div>
             </div>
             <div class="projectsFinal__week">
@@ -101,8 +101,8 @@
                     <i class="icon-receipt-shopping-streamline"></i>
                 </div>
                 <div class="projectsFinal__week__details">
-                    <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Week 6 - Feria de Proyecto</a>
-                    <p class="projectsFinal__week__details__description">Limite de Entrega: 9 de Mayo , hasta las 10:15.</p>
+                    <a href="proyecto-final/semana6.html" class="projectsFinal__week__details__week">Week 6 - Project Fair</a>
+                    <p class="projectsFinal__week__details__description">Delivery Limit: May 9, until 10:15.</p>
                 </div>
             </div>
             
